MANVIR SANDBOX/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Lead_Product__c</fullName>
        <inlineHelpText>&quot;Lead Product&quot; is automatically calculated from the lagest value in the opportunity</inlineHelpText>
        <label>Lead Product</label>
        <picklist>
            <picklistValues>
                <fullName>SMSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FusionMMSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router (S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router (M)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA OTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIR App&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antispam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcoder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other not covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Comments__c</fullName>
        <label>Loss Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Competitor__c</fullName>
        <label>Loss Competitor</label>
        <picklist>
            <controllingField>Primary_Loss_Reason__c</controllingField>
            <picklistValues>
                <fullName>724 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commverge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comptel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comverse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drutt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emericom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empower Interactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eServ Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMV Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdotTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intracom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jataayu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jinny Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masiya Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mBalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Date__c</fullName>
        <description>The date the opportunity was set to lost</description>
        <inlineHelpText>The date the opportunity was set to lost</inlineHelpText>
        <label>Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Pipe_ID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>New Pipe ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Number_of_Product_Rev_Type_Line_Items__c</fullName>
        <label>Number of Product &amp; Rev Type Line Items</label>
        <summaryForeignKey>Revenue_Type__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OLD_Pipe_ID__c</fullName>
        <label>OLD Pipe ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Time__c</fullName>
        <formula>IF(CloseDate - Support_Start_Date__c &gt;30, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_or_Contract_Approved__c</fullName>
        <label>PO or Contract Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_s__c</fullName>
        <description>Opportunities that  have some element of 3rd party content probived by an agreed Partner</description>
        <inlineHelpText>Please pick one or more partner(s) who will provide 3rd party partner content</inlineHelpText>
        <label>Partner(s)</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Centric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentry Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PipeIDPrefix__c</fullName>
        <formula>CASE
(
Region__c ,
&quot;Americas&quot; , &quot;B&quot; ,
&quot;EMEA&quot; , &quot;R&quot; ,
&quot;Asia&quot; , &quot;A&quot; ,
&quot;First Hop&quot;, &quot;F&quot;,
&quot;Australia&quot; , &quot;S&quot; ,
&quot;AsiaPAC&quot;, &quot;A&quot;,
&quot;Mavenir&quot; , &quot;M&quot;,
&quot;?&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PipeIDPrefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PipeIDSuffixOld__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>PipeIDSuffixOld</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PipeIDSuffix__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>PipeIDSuffix</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PipeID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>PipeID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Primary_Loss_Reason__c</fullName>
        <label>Primary Loss Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to another Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won via different channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <label>Programme Manager</label>
        <picklist>
            <picklistValues>
                <fullName>A. Tayler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H Ghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J. Wells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R. Haines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Kohli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be identified</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number_2__c</fullName>
        <label>Project Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Lag_Days__c</fullName>
        <defaultValue>45</defaultValue>
        <label>Project Start Lag Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Status__c</fullName>
        <inlineHelpText>To be completed by Sales Engineer</inlineHelpText>
        <label>Proposal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for TRAC Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Product Mgmt SOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Delivery SOC/Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <picklist>
            <picklistValues>
                <fullName>RFI - Request for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP - Request for Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Proposal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_ID__c</fullName>
        <displayFormat>NA- {000}</displayFormat>
        <label>Prospect ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quota_Amount__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFX_Proposal_Expected_Date__c</fullName>
        <inlineHelpText>This is the expected arrival date of the RFP.</inlineHelpText>
        <label>RFX/Proposal Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RVP_Employee_ID__c</fullName>
        <label>RVP Employee ID</label>
        <picklist>
            <controllingField>RVP_Regional_Director1__c</controllingField>
            <picklistValues>
                <fullName>SFX00102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00337</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00089</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00613N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00650C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00651C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00652C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFX00653C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RVP_Regional_Director1__c</fullName>
        <label>RVP Regional Director</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>A. Wyse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Swan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Fisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M. Thong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R. Chandra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S. Summers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Das</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.Burton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Jalalizadeh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J. Yriondo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <label>Red Flags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Hop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remark_Last_Modified_On__c</fullName>
        <label>Remark Last Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesRef__c</fullName>
        <formula>IF( LEN( OLD_Pipe_ID__c) &lt;&gt; 0 , OLD_Pipe_ID__c,  PipeIDPrefix__c&amp;New_Pipe_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesRef</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <label>Sales Engineer</label>
        <picklist>
            <picklistValues>
                <fullName>A Windridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Bosch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HL Cheng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HT Ong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Davey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Sattarujawong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P Ho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P Silva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R Macfadyen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be identified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_agent_or_consultant__c</fullName>
        <inlineHelpText>If a 3rd party commission agent/consultant with a current agreement will be paid commission for this deal please select. If an agreement with a 3rd party is probable or still pending please select &apos;Other&apos;. Otherwise select &apos;Not applicable&apos;.</inlineHelpText>
        <label>Selling agent or consultant</label>
        <picklist>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mostniaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jetview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buster Burke Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anabatic Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>Which Solution best represents this opportunity</description>
        <inlineHelpText>Voice &amp; Video - Converged IP telephony, EIR, UMA, Mobility Server, Media Servers
SMS Solutions - AirMessenger/Gate, IP-SMSC, SMS Policy Engines
IP Messaging - RMS, XDMS,Presence,HTTP g/w,Social Aggregation
Other - not covered by the three solutions</inlineHelpText>
        <label>Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Voice &amp; Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIR Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_commercial_payment_terms__c</fullName>
        <label>Standard commercial/payment terms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An admin field to indicate which bookings are exepmted from the GM modifier for commission calculations</description>
        <label>Strategic Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Duration_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Support Duration Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Rev_Type_Total__c</fullName>
        <label>Support Rev Type Total</label>
        <summarizedField>Revenue_Type__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Revenue_Type__c.Revenue_Type__c</field>
            <operation>equals</operation>
            <value>Support</value>
        </summaryFilterItems>
        <summaryForeignKey>Revenue_Type__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRAC_CD_number__c</fullName>
        <description>CD number to be entered</description>
        <inlineHelpText>Enter TRAC/CD number</inlineHelpText>
        <label>TRAC/CD number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Approval_Days__c</fullName>
        <formula>IF( Bid_Approved_Date__c  -  First_Bid_Approval_Submission__c  &lt;= 0,0, Bid_Approved_Date__c - First_Bid_Approval_Submission__c  - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Approval Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Truncated_Comments__c</fullName>
        <label>Truncated Comments</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Processed__c</fullName>
        <description>The Stage is WON 100% processed and authorised if box is checked.</description>
        <label>Win Authorised?</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_GM__c</fullName>
        <label>3rd Party GM%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Spend__c</fullName>
        <description>to record the total cost of 3rd party purchases</description>
        <label>3rd Party Spend</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>OpportunitiesAmericas</fullName>
        <columns>SalesRef__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Opportunities Americas</label>
    </listViews>
    <listViews>
        <fullName>OpportunitiesAustralia</fullName>
        <columns>SalesRef__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>,Australia,Fiji,French Polynesia,New Caledonia,New Zealand,Papua New Guinea</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2009</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AsiaPAC</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Opportunities Australia</label>
    </listViews>
    <listViews>
        <fullName>OpportunitiesEMEA</fullName>
        <columns>SalesRef__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>RVP_Employee_ID__c</columns>
        <columns>RVP_Regional_Director1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2010</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.OpportunityRecordType,Opportunity.LockedOpportunityRecordType</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2010</value>
        </filters>
        <label>Opportunities EMEA</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_Americas</fullName>
        <columns>SalesRef__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Opportunities Americas (All)</label>
    </listViews>
    <listViews>
        <fullName>OppsbyRegionAmericas</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Opps by Region = Americas</label>
    </listViews>
    <listViews>
        <fullName>ProgramManagerOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Manager__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Program Manager Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>LockedOpportunityRecordType</fullName>
        <active>true</active>
        <businessProcess>Locked Opportunity Sales Process</businessProcess>
        <label>Locked Opportunity Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>OpportunityRecordType</fullName>
        <active>true</active>
        <businessProcess>Global Sales Process</businessProcess>
        <label>Opportunity Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>QuotaRecordType</fullName>
        <active>true</active>
        <businessProcess>Quota Process</businessProcess>
        <description>Used to track user quotas</description>
        <label>Quota Record Type</label>
    </recordTypes>
</CustomObject>